--- a/styles/global.css
+++ b/styles/global.css
@@ -4,3 +4,19 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* Definição de variáveis globais no Style Guide */
+:root {
+  --brand-color: #FF5733; /* Cor principal */
+  --background-color: #FFFFFF;
+  --surface-color: #F5F5F5;
+  --skeleton-color: #D9D9D9;
+  --text-color-primary: #313131; /* Cor do texto primário */
+  --text-color-secondary: #6C6C6C; /* Cor do texto secundário */
+  --shape-transparency: rgba(255, 255, 255, 0.56); /* Transparência */
+}
+
+body {
+  color: var(--text-color-secondary); /* Cor do texto */
+  background-color: var(--background-color); /* Cor de fundo */
+}
