--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,3 @@
 @import url('./global.css');
 
-/* Outros estilos podem ser adicionados aqui futuramente */
+/* Estilos adicionais podem ser adicionados aqui */
