--- a/styles/global.css
+++ b/styles/global.css
@@ -7,13 +7,18 @@
 
 /* Definição de variáveis globais no Style Guide */
 :root {
-  --brand-color: #FF5733; /* Cor principal */
-  --background-color: #FFFFFF;
+  --brand-color: #FF5733; 
+  --background-color: #FFFFFF; 
   --surface-color: #F5F5F5;
   --skeleton-color: #D9D9D9;
   --text-color-primary: #313131; /* Cor do texto primário */
   --text-color-secondary: #6C6C6C; /* Cor do texto secundário */
   --shape-transparency: rgba(255, 255, 255, 0.56); /* Transparência */
+  --font-family: 'Poppins', sans-serif; /* Fonte padrão */
+  --text: 16px/1.5 var(--font-family); /* Tamanho normal */
+  --text-sm: 12px/175% var(--font-family); /* Tamanho pequeno */
+  --text-md: 14px/175% vat(--font-family); /* Tamanho médio */
+  --text-lg: bold 32px/125% var(--font-family); /* Tamanho grande */
 }
 
 body {
