--- a/styles/global.css
+++ b/styles/global.css
@@ -25,3 +25,22 @@ body {
   color: var(--text-color-secondary); /* Cor do texto */
   background-color: var(--background-color); /* Cor de fundo */
 }
+
+a {
+  text-decoration: none;
+  color: inherit; /* Herda a cor do elemento pai */
+}
+a:hover {
+  color: var(--brand-color); /* Cor ao passar o mouse */
+  text-decoration: underline;
+}
+
+.container {
+  padding-inline: 32px;
+  max-width: 1280px;
+  margin-inline: auto;
+}
+
+.bg-surface-color {
+  background-color: var(--surface-color)
+}
