--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,5 @@
 @import url('./global.css');
-@import url('./nav.css')
+@import url('./nav.css');
+@import url('./header.css');
 
 /* Estilos adicionais podem ser adicionados aqui */
