--- a/styles/nav.css
+++ b/styles/nav.css
@@ -17,6 +17,6 @@ nav ul {
 nav li:last-child img {
   width: 40px;
   height: 40px;
-  border-radius: 50%; /* Torna a imagem redonda */
-  object-fit: cover; /* Garante que a imagem se encaixe */
+  /* border-radius: 50%;  Torna a imagem redonda */
+  /* object-fit: cover;  Garante que a imagem se encaixe */
 }
